# scripturejam

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.test  LICENSE  README.md  run.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  content_issue.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: package.json  pnpm-workspace.yaml
app/server/: Dockerfile  package.json
app/server/src/: config.ts  index.ts  logger.ts
app/server/src/content/: loader.ts
app/server/src/db/: client.ts  migrate.ts  persist.ts  schema.ts
app/server/tests/: scoring.test.ts
app/web/: package.json  svelte.config.js
app/web/src/: app.css
content-tools/: README.md  pyproject.toml
content-tools/prompts/: README.md  avatar-aliases.md  avatar-blurb.md  non-person-entities.md  question-generation.md  review-checklist.md
content-tools/scripts/: install-bible-texts.sh
content-tools/src/scripturejam_tools/: __init__.py
content-tools/src/scripturejam_tools/generate/: questions.py
content-tools/src/scripturejam_tools/ingest/: bible_text.py  eastons.py
content-tools/src/scripturejam_tools/review/: cli.py
content-tools/tests/: test_placeholder.py
content/avatars/: entities.yaml  schema.json
content/bible/: README.md
content/packs/: named_characters.yaml  parables.yaml  schema.json
deploy/: Caddyfile  compose.caddy.yml  compose.cloudflare.yml  docker-compose.yml
docker/: build-web-package.json  prod-package.json  test-package.json  types-package.json
docs/: deployment.md  security.md
scripts/: install.sh
(+25 files in other folders)
