[project]
name = "scripturejam-tools"
version = "0.1.0"
description = "Offline content pipeline — question generation, avatar ingest, review CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "jsonschema>=4.23.0",
    "rich>=13.9.0",
    "typer>=0.12.0",
]

[project.scripts]
sj-review = "scripturejam_tools.review.cli:app"
sj-generate = "scripturejam_tools.generate.questions:app"
sj-ingest = "scripturejam_tools.ingest.eastons:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scripturejam_tools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.9.0",
]
